--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@mui/utils": "^5.15.11",
         "@mui/x-data-grid": "^6.19.4",
         "@reduxjs/toolkit": "^2.2.1",
+        "@supabase/supabase-js": "^2.49.8",
         "@tabler/icons-react": "^2.47.0",
         "@vitejs/plugin-react": "^4.2.1",
         "axios": "^1.6.7",
